Added keyboard input functionality
Not able to use the keyboard to control calculator.

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
       <button type="button" id="btnDecimal" class="btns">.</button><button type="button" id="btnZero" class="btns">0</button><button type="button" id="btnEqual" class="btns">=</button><button type="button" id="btnMultiply" class="btns">*</button><button type="button" id="btnDivide" class="btns">/</button>
     </div>
     <script src="mainscript.js"></script>
+    <script src="keyboardinput.js"></script>
   </body>
 </html>
